--- a/កែប.html
+++ b/កែប.html
@@ -96,22 +96,191 @@
             <div class="description-1">
                <div class="img-content-wrap">
                   <!-- Main Image of Post in Top -->
-                  <img class="img-content-post" src="images/Cambodia/កោះកុង.jpg"/>
+                  <img class="img-content-post" src="images/Cambodia/កែប.jpg"/>
                   <div class="overlay">
                      <!-- Title Will show upper Main Image -->
-                     <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តកោះកុង</p>
+                     <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តកែប</p>
                   </div>
                </div>
                <!-- All Content and Image put here -->
-               <!-- Discription of post write here -->
-               <p class="text-description"></p>
-               <!-- Sub Title it will show Border, Big , and color red -->
-               <p class="text-title-readmore">​រាជធានីភ្នំពេញ</p>
-               <!-- Sub Title 1 will show border, Big , color back -->
-               <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-               <!-- Image post in Discription -->
-               <img class="img-content-post" src="./images/ខេត្តសៀមរាប.jpeg">
+               <p class="text-description">ខេត្តកែបគឺជាខេត្តមួយដ៏តូចបំផុតរបស់កម្ពុជាដែលគ្របដណ្ដប់ផ្ទៃដីប្រមាណ​ ៣៣៦ គ.ម២  និងមានប្រជាជនចំនួន ៤០,២៨០ នាក់។ វាគឺជាខេត្តមួយក្នុងចំណោមខេត្តថ្មីៗបំផុតនៃកម្ពុជា រួមជាមួយ ប៉ៃលិន ព្រះសីហនុ និង ត្បូងឃ្មុំ ដែលត្រូវបានបង្កើតឡើងតាមរាជក្រឹត្យថ្ងៃ ២២ ធ្នូ ២០០៨ ត្រូវបានបំបែកចេញពីខេត្តកំពត ស្របនឹងការសម្របសម្រួលព្រំសីមាខេត្តជាច្រើន។ ទីរួមខេត្តគឺក្រុងកែប ហើយក៏មានឧទ្យានជាតិមួយដែរ ដែលគេហៅថាឧទ្យានជាតិកែប។</p>
+               <p class="text-description">ខេត្តកែប មានកន្លែងកំសាន្ដដែលទាក់ទាញភ្ញៀវទេសចរណ៍ជាច្រើនមានដូចជា :</p>
+                           <!--ឆ្នេរអង្កោល-->
+               <p class="text-title-readmore">ឆ្នេរអង្កោល</p>
+               <!-- Bootstrap Slide View -->
+               <div class="img-content-post">
+                  <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+                     <ol class="carousel-indicators">
+                        <li data-target="#carouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                        <li data-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                        <li data-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                        <li data-target="#carouselIndicators" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                        <li data-target="#carouselIndicators" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                     </ol>
+                     <div class="carousel-inner">
+                        <div class="carousel-item active">
+                           <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល 1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                     </div>
+                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Previous</span>
+                     </button>
+                     <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Next</span>
+                     </button>
+                  </div>
+                  <!-- End Bootstrap Slide View -->
+               </div>
+               <p class="text-description">ឆ្នេរអង្កោល គឺជាតំបន់ទេសចរណ៍បែបធម្មជាតិដ៏ស្រស់ស្អាត និងខ្យល់អាកាសបរិសុទ្ធមួយកន្លែង ដែលមានចម្ងាយប្រមាណ១៧គីឡូម៉ែត្រពីក្រុងកែប ធ្វើដំណើរប្រហែល២៥នាទី។ </br>នៅតាមផ្លូវនោះ យើងនឹងបានគយគន់មើលទេសភាពដ៏ស្រស់ត្រកាលនៅតាមដងផ្លូវ ដូចជាព្រៃកោងកាង និងព្រៃលិចទឹកដែលជាជម្រកមច្ឆាជាតិដ៏ធំល្វឹងល្វើយដាច់កន្ទុយភ្នែក។</br>មួយវិញទៀត បរិយាកាសនៅទីនោះ នឹងរំសាយនូវទុក្ខកង្វល់ បង្កើនភាពរីករាយ និងផ្តល់អារម្មណ៍ស្រស់ស្រាយជាក់ជាពុំខាន។</br>លោកអ្នក ក៏អាចទទួលនូវបទពិសោធន៍ថ្មីៗដោយការបោះតង់ និងស្វែងយល់ពីសកម្មភាពនេសាទផងដែរ។</p>
+               <p class="text-description">ឆ្នេរអង្កោលនេះ មានទីតាំងស្ថិតក្នុងឃុំពងទឹក ស្រុកដំណាក់ចង្អើរ ខេត្តកែប។</p>
+               <p class="text-title-readmore">រមណីយដ្ឋានកោះទន្សាយ</p>
+               <!-- Bootstrap Slide View -->
+               <div class="img-content-post">
+                  <div id="carouselIndicators1" class="carousel slide" data-ride="carousel">
+                     <ol class="carousel-indicators">
+                        <li data-target="#carouselIndicators1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                        <li data-target="#carouselIndicators1" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                        <li data-target="#carouselIndicators1" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                        <li data-target="#carouselIndicators1" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                     </ol>
+                     <div class="carousel-inner">
+                        <div class="carousel-item active">
+                           <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                     </div>
+                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="prev">
+                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Previous</span>
+                     </button>
+                     <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="next">
+                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Next</span>
+                     </button>
+                  </div>
+                  <!-- End Bootstrap Slide View -->
+               </div>
+               <p class="text-description">រមណីយដ្ឋានកោះទន្សាយ គឺជារមណីយដ្ឋានធម្មជាតិដ៏ល្អប្រណិត ដែលមានលក្ខណៈអំណោយផលពីធម្មជាតិ ដោយមានឆ្នេរសមុទ្រ ២កន្លែង វាលខ្សាច់ស និងជាកន្លែងងូតទឹកលេងយ៉ាងសប្បាយរីករាយ ក្នុងថ្ងៃឈប់សម្រាកលំហែអារម្មណ៍។ វាមានចម្ងាយប្រមាណ ៨គីឡូម៉ែត្រពីក្រុងកែប ប្រមាណ ១៥នាទី។</p>
+               <p class="text-description">សម្រាប់ការធ្វើដំណើរដើម្បីទៅដល់ទីតាំងនៃរមណីយដ្ឋានកោះទន្សាយ ភ្ញៀវទេសចរត្រូវធ្វើដំណើរតាមផ្លូវទឹក ដោយការជិះទូក ឬកាណូតក្នុងចម្ងាយប្រមាណ១៥នាទី- ៣០នាទី ទៅតាមលក្ខខណ្ឌធម្មជាតិ និង អាកាសធាតុ។ ទូកមួយអាចជិះបានគ្នា ៨នាក់ ក្នុងតម្លៃ២៥ដុល្លារសម្រាប់ធ្វើដំណើរទៅមក។ រីឯកាណូតមានតម្លៃប្រមាណ ៨ដុល្លារសម្រាប់ធ្វើដំណើរមួយជើង។ </p>
+               <p class="text-description">គួរបញ្ជាក់ផងដែរថា ទូកចេញដំណើរពីកំពង់ផែក្រុងកែបពីម៉ោង ៩.០០ព្រឹក, ១៣.០០ថ្ងៃត្រង់ និង ជើងចុងក្រោយម៉ោង ១៥.០០ថ្ងៃត្រង់។ នៅទីនេះ មានកញ្ចុះអង្គុយលំហែកាយ ហើយក៏មានអាហារដ្ឋានផងដែរ។ លោកអ្នកក៏អាចកម្ម៉ង់អាហារគ្រឿងសមុទ្រ អាហារបែបបរទេស និង អាហារបែបខ្មែរជាដើម ជាមួយនឹងតម្លៃសមរម្យទៅតាមតម្រូវការ។</p>
+               <p class="text-description">ក្រៅពីការលំហែកាយ នៅទីនេះក៏មានកន្លែងស្នាក់នៅលក្ខណៈគ្រួសារជាមួយនឹងបឹងហ្គាឡូជាច្រើន របស់អ្នកភូមិដែលរស់នៅលើកោះ ឬ បោះតង់។ បន្ទប់ទាំងអស់នោះសុទ្ធតែមានការផ្គត់ផ្គង់ប្រព័ន្ធទឹក និង ភ្លើងសព្វគ្រប់តែម្តង។</p>
+               <p class="text-title-readmore">សួនមេអំបៅកែប</p>
+               <!-- Bootstrap Slide View -->
+               <div class="img-content-post">
+                  <div id="carouselIndicators2" class="carousel slide" data-ride="carousel">
+                     <ol class="carousel-indicators">
+                        <li data-target="#carouselIndicators2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                        <li data-target="#carouselIndicators2" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                        <li data-target="#carouselIndicators2" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                        <li data-target="#carouselIndicators2" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                        <li data-target="#carouselIndicators2" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                        <li data-target="#carouselIndicators2" data-bs-slide-to="5" aria-label="Slide 6"></li>
+                        <li data-target="#carouselIndicators2" data-bs-slide-to="6" aria-label="Slide 7"></li>
+                     </ol>
+                     <div class="carousel-inner">
+                        <div class="carousel-item active">
+                           <img src="images/image travel /កែប/សួនមេអំបៅ/សួនមេអំបៅ.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/សួនមេអំបៅ/សួនមេអំបៅ1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/សួនមេអំបៅ/សួនមេអំបៅ2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/សួនមេអំបៅ/សួនមេអំបៅ3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/សួនមេអំបៅ/សួនមេអំបៅ4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/សួនមេអំបៅ/សួនមេអំបៅ5.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/សួនមេអំបៅ/សួនមេអំបៅ6.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                     </div>
+                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="prev">
+                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Previous</span>
+                     </button>
+                     <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="next">
+                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Next</span>
+                     </button>
+                  </div>
+                  <!-- End Bootstrap Slide View -->
+               </div>
+               <p class="text-description">សួនមេអំបៅកែប គឺជាកន្លែងកំសាន្តមានមេអំបៅជាង ៦០ប្រភេទ បានលាក់ខ្លួនក្នុងសួនមេអំបៅដែលនៅជិតឧទ្យានជាតិកែប ក្នុងខេត្តកែប។ វាមានចម្ងាយប្រមាណ ១២គីឡូម៉ែត្រពីក្រុងកែប ប្រមាណ២៥នាទី។                  
+               </br>សួននេះមានកន្លែងចិញ្ចឹមមេអំបៅ កន្លែងអង្គុយលេង អាហារដ្ឋាន និងមានសួនដែលមានផ្កាច្រើនប្រភេទផងដែរ។ នៅទីនេះ បើកជារៀងរាល់ថ្ងៃចាប់ពីម៉ោង៧ព្រឹក ដល់ម៉ោង៥ល្ងាច។</br>
+               តម្លៃសំបុត្រមួយដុល្លារសម្រាប់ជនបរទេស និងសម្រាប់ភ្ញៀវជាតិវិញគឺមិនបានកំណត់ទេអាស្រ័យលើការបរិច្ចាកទៅវិញ។ លោកអ្នកក៏អាចរកអ្នកមគ្គុទេសក៍ ដោយគ្រាន់តែចំណាយបន្ថែម ៣ដុល្លារក្នុងម្នាក់។</br>
+               សួនមេអំបៅកែបនេះ ស្ថិតនៅភូមិកែប សង្កាត់កែប ក្រុងកែប ខេត្តកែប ហើយវាមានអាសយដ្ឋានស្ថិតនូវជិតវិមានឯករាជ្យខេត្តកែបតាមផ្លូវឡើងសំដៅទៅរកភ្នំ។</p>
+               <p class="text-title-readmore">កាហ្វេលើភ្នំ</p>
+               <div class="img-content-post">
+                  <div id="carouselIndicators3" class="carousel slide" data-ride="carousel">
+                     <ol class="carousel-indicators">
+                        <li data-target="#carouselIndicators3" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                        <li data-target="#carouselIndicators3" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                        <li data-target="#carouselIndicators3" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                        <li data-target="#carouselIndicators3" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                        <li data-target="#carouselIndicators3" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                     </ol>
+                     <div class="carousel-inner">
+                        <div class="carousel-item active">
+                           <img src="images/image travel /កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/image travel /កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                     </div>
+                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="prev">
+                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Previous</span>
+                     </button>
+                     <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="next">
+                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Next</span>
+                     </button>
+                  </div>
+                  <!-- End Bootstrap Slide View -->
+               </div>
+               <p class="text-description">កាហ្វេលើភ្នំ Led zep Cafe គឺជាហាងកាហ្វេមួយកន្លែងដែលមានចម្ងាយប្រមាណ ១៩គីឡូម៉ែត្រពីក្រុងកែប ធ្វើដំណើរប្រហែល៣០នាទី។
+               </br>ជាមួយទេសភាពធម្មជាតិ កាហ្វេលើភ្នំ មានបម្រើសេវាកម្មដូចជា៖ កាហ្វេ ភេសជ្ជៈ និងអាហារសម្រន់មួយចំនួនផងដែរ។
+               </br>កាហ្វេលើភ្នំ Led zep Cafeនេះ ស្ថិតនៅភូមិថ្មី សង្កាត់ព្រៃធំ ក្រុងកែប ខេត្តកែប។
+               </p>
             </div>
+            <!-- End of content ខេត្តកែប -->
          </div>
       </div>
       <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
