--- a/index.html
+++ b/index.html
@@ -83,11 +83,25 @@
                 </ul>
               </div>
             </li>
-            <li><a href="សណ្ឋាគារ.html"  style="color:inherit; transition: none;">សណ្ឋាគារ</a></li>
+            <li>
+              <a href="សណ្ឋាគារ.html" style="color: inherit; transition: none"
+                >សណ្ឋាគារ</a
+              >
+            </li>
             <li>រថយន្ត</li>
             <li>រថយន្តក្រុង</li>
-            <li> <a href="./flight_schedule.html"  style="color:inherit; transition: none;">ជើងហោះហើរ</a></li>
-            <li> <a href="#food-footer" style="color:inherit; transition: none;">អាហារ</a> </li>
+            <li>
+              <a
+                href="./flight_schedule.html"
+                style="color: inherit; transition: none"
+                >ជើងហោះហើរ</a
+              >
+            </li>
+            <li>
+              <a href="#food-footer" style="color: inherit; transition: none"
+                >អាហារ</a
+              >
+            </li>
           </ul>
         </div>
         <img id="angkor-logo" src="images/angkor_wat_logo.png" alt="Cambodia" />
