--- a/ព្រះសីហនុ.html
+++ b/ព្រះសីហនុ.html
@@ -22,9 +22,9 @@
       <head>
    </head>
    <body>
-      <!-- <div class="preloader">
+      <div class="preloader">
          <div class="preloader_wrapper"></div>
-      </div> -->
+      </div>
       <nav id="menu-navbar">
          <div id="navbar-content-wrapper">
             <div
@@ -96,21 +96,111 @@
             <div class="description-1">
                <div class="img-content-wrap">
                   <!-- Main Image of Post in Top -->
-                  <img class="img-content-post" src="images/Cambodia/កោះកុង.jpg"/>
+                  <img class="img-content-post" src="images/Cambodia/ព្រះសីហនុ.jpg"/>
                   <div class="overlay">
                      <!-- Title Will show upper Main Image -->
-                     <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តកោះកុង</p>
+                     <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តព្រះសីហនុ</p>
                   </div>
                </div>
                <!-- All Content and Image put here -->
-               <!-- Discription of post write here -->
-               <p class="text-description"></p>
-               <!-- Sub Title it will show Border, Big , and color red -->
-               <p class="text-title-readmore">​រាជធានីភ្នំពេញ</p>
-               <!-- Sub Title 1 will show border, Big , color back -->
-               <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-               <!-- Image post in Discription -->
-               <img class="img-content-post" src="./images/ខេត្តសៀមរាប.jpeg">
+               <p class="text-description">ខេត្តព្រះសីហនុ ជាក្រុងទេសចរណ៍ធម្មជាតិ ដែលមានព្រំប្រទល់ខាងកើតជាប់នឹងស្រុកព្រៃនប់ និងស្រុកស្ទឹងហាវ ខាងលិចជាប់នឹងសមុទ្រ ខាងជើងជាប់នឹងស្រុកស្ទឹងហាវ
+                   និងខាងត្បូងជាប់នឹងស្រុកព្រៃនប់មានផ្ទៃដីសរុប ១៩៥.៩០ គម២មានប្រជាជនសរុបចំនួន ៧,៦៥៧នាក់។ “ក្រុងព្រះសីហនុ” ស្ថិតនៅខេត្ដព្រះសីហនុមានព្រំប្រទល់ៈខាងកើតជាប់នឹងស្រុកព្រៃនប់ 
+                   និងស្រុកស្ទឹងហាវ ខាងលិចជាប់នឹងសមុទ្រ ខាងជើងជាប់នឹងស្រុកស្ទឹងហាវ និងខាងត្បូងជាប់នឹងស្រុកព្រៃនប់ផ្ទៃក្រឡាបេក្ខភាព(គម២)១៩៥.៩០ គម២មាន ៥សង្កាត់ប្រជាជន ៧៧,៦៥៧នាក់ (១៧ ០០៣គ្រួសារ) ក្នុងនោះស្រី៣៩ ៥៥៤នាក់។</p>
+               <p class="text-description">ខេត្តព្រះសីហនុ មានកន្លែងកំសាន្ដដែលទាក់ទាញភ្ញៀវទេសចរណ៍ជាច្រើនមានដូចជា :</p>
+               <p class="text-title-readmore">រមណីយដ្ឋានឆ្នេរខ្សាច់ស តាបារាំង</p>
+               <!-- Bootstrap Slide View -->
+               <div class="img-content-post">
+                   <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+                     <ol class="carousel-indicators">
+                       <li data-target="#carouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                       <li data-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                       <li data-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                       <li data-target="#carouselIndicators" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                       <li data-target="#carouselIndicators" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                     </ol>
+                     <div class="carousel-inner">
+                       <div class="carousel-item active">
+                         <img src="images/image travel /ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/ឆ្នេរខ្សាច់ស តាបារាំង .jpeg" class="d-block w-100 img-content-post" alt="...">
+                       </div>
+                       <div class="carousel-item">
+                         <img src="images/image travel /ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/ឆ្នេរខ្សាច់ស តាបារាំង1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                       </div>
+                       <div class="carousel-item">
+                         <img src="images/image travel /ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/ឆ្នេរខ្សាច់ស តាបារាំង2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                       </div>
+                       <div class="carousel-item">
+                         <img src="images/image travel /ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/នេរខ្សាច់ស តាបារាំង3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                       </div>
+                       <div class="carousel-item">
+                        <img src="images/image travel /ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/នេរខ្សាច់ស តាបារាំង4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                     </div>
+                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                       <span class="visually-hidden">Previous</span>
+                     </button>
+                     <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                       <span class="visually-hidden">Next</span>
+                     </button>
+                   </div>
+                   <!-- End Bootstrap Slide View -->
+               </div>
+               <p class="text-description">រមណីយដ្ឋានឆ្នេរខ្សាច់ស តាបារាំង គឺជារមណីយដ្ឋានមួយកន្លែងដែលកំពុងទាក់ទាញភ្ញៀវទេសចរយ៉ាងពុះកញ្ជ្រោលពីមួយថ្ងៃទៅមួយថ្ងៃ។ វាមានចម្ងាយប្រមាណ ១៩០គីឡូម៉ែត្រ ពីវត្តភ្នំ ប្រមាណ ៥ម៉ោង។
+               </br> o	ធ្វើដំណើរពីភ្នំពេញមកដល់បង្គោលគីឡូម៉ែត្រលេខ ១៦៣ និងហួសបន្តិចប្រហែល ៥០០ម៉ែត្រ មានផ្លូវបត់ស្តាំ (កន្លែងហ្នឹងគេហៅថាតានៃ)
+               </br> o	ពីតានៃ រហូតដល់ ផ្លូវបត់ឆ្វេងដែលមានស្លាកសញ្ញា «ក្រសួងអភិវឌ្ឍន៍ជនបទ» ធ្វើដំណើរ មានចំងាយ ១០គីឡូម៉ែត្រ។
+               </br> o	ធ្វើដំណើរពី «ក្រសួងអភិវឌ្ឍន៍ជនបទ» ទៅមុខរហូតដល់ស្លាកសញ្ញា «រមណីយដ្ឋានពយយាយម៉ៅ» ចំងាយ ៩.៥ គីឡូម៉ែត្រ។
+               </br> o	ធ្វើដំណើរពី «រមណីយដ្ឋានពយយាយម៉ៅ» ទៅរមណីយដ្ឋានឆ្នេរខ្សាច់ស តាបារាំង មានចំងាយ ៧.៥ គីឡូម៉ែត្រ។
+               </br></br>នៅទីនោះមានខ្សាច់សក្បោសទឹករាក់ៗស្រួលលេង ទឹកសមុទ្រដូចគ្រីស្តាល់មិនចាញ់ស្រុកគេឡើយ។ ទោះបីជាយ៉ាងណាក៏ដោយ ភ្ញៀវទេសចរគួរតែដឹងពីចំនុចសំខាន់ដូចខាងក្រោម
+               </br> o	ដើម្បីទៅដល់គោលដៅ ភ្ញៀវទេសចរត្រូវឆ្លងកាត់ភូមិស្រុក ដែលជាផ្លូវលំ មានគ្រលុកធំៗ កន្លែងខ្លះស្ទើរតែដាច់ផ្លូវផងដែរ
+               </br> o	នៅទីនោះ ពុំទាន់មានកន្លែងស្នាក់នៅទេ ប៉ុន្តែយើងអាចបោះតង់ដោយខ្លួនឯងបាន
+               </br> o	នៅទីនោះ ពុំទាន់មានលក់អាហារ និងភេសជ្ជៈនៅឡើយទេ ។ ភ្ញៀវទេសចរ គួរតែរៀបចំជាមុនដូចជា បាយ អាហារ ភេសជ្ជៈ (ទឺកក្រូច ទឹកសុទ្ធ) ទឹកកក ចង្ក្រានអាំងសាំង កន្ទេលអង្គុយលេងដោយខ្លួនឯង ។ កន្ទេល បើទៅជួលនៅទីនោះមួយតម្លៃ ២ ម៉ឺនរៀល។
+               </p>
+               <p class="text-title-readmore">រមណីយដ្ឋាន ពិកនិក</p>
+               <!-- Bootstrap Slide View -->
+               <div class="img-content-post">
+                  <div id="carouselIndicators1" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselIndicators1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                      <li data-target="#carouselIndicators1" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                      <li data-target="#carouselIndicators1" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                      <li data-target="#carouselIndicators1" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                      <li data-target="#carouselIndicators1" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="images/image travel /ព្រះសីហនុ//រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក .jpeg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/image travel /ព្រះសីហនុ/រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/image travel /ព្រះសីហនុ/រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/image travel /ព្រះសីហនុ/រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                       <img src="images/image travel /ព្រះសីហនុ/រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                  <!-- End Bootstrap Slide View -->
+              </div>
+              <p class="text-description">សម្រាកលំហែកាយស្វែងរកក្តីសុខសម្រាប់ខ្លួនឯង និងមនុស្សជាទីស្រលាញ់នៅរមណីយដ្ឋាន ពិកនិក - Picnic Resort។ លោកអ្នកនឹងទទួលបានអារម្មណ៍ស្រស់ថ្លា ជាមួយនឹងទេសភាពដ៏ស្រស់ត្រកាល ដែលបង្កើតបានជាអនុស្សាវរីយ៍មិនអាចបំភ្លេចបាន។ វាមានចម្ងាយប្រមាណ១៤០គីឡូម៉ែត្រពីវត្តភ្នំ ធ្វើដំណើរប្រហែលជិត៣ម៉ោង។
+               </br></br>នៅទីនេះ មានបន្ទប់ស្រស់ស្អាត បរិយាកាសត្រជាក់នៅលើជើងភ្នំធ្វើឱ្យអារម្មណ៍ស្រស់ស្រាយ។ មានបន្ទប់ដូចជា៖
+               </br> o	បឹងកាឡូ
+               </br> o	បន្ទប់កុងតឺន័រ
+               </br> o	តង់
+               </p>
             </div>
          </div>
       </div>
