--- a/កោះកុង.html
+++ b/កោះកុង.html
@@ -22,9 +22,9 @@
       <head>
    </head>
    <body>
-      <!-- <div class="preloader">
+      <div class="preloader">
          <div class="preloader_wrapper"></div>
-      </div> -->
+      </div>
       <nav id="menu-navbar">
          <div id="navbar-content-wrapper">
             <div id="right-side-menu" class="d-flex justify-content-between align-items-center">
