--- a/កំពង់ឆ្នាំង.html
+++ b/កំពង់ឆ្នាំង.html
@@ -96,10 +96,10 @@
             <div class="description-1">
                <div class="img-content-wrap">
                   <!-- Main Image of Post in Top -->
-                  <img class="img-content-post" src="images/Cambodia/កោះកុង.jpg"/>
+                  <img class="img-content-post" src="images/Cambodia/កំពង់ឆ្នាំង.jpg"/>
                   <div class="overlay">
                      <!-- Title Will show upper Main Image -->
-                     <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តកោះកុង</p>
+                     <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តកំពង់ឆ្នាំង</p>
                   </div>
                </div>
                <!-- All Content and Image put here -->
