--- a/បាត់ដំបង.html
+++ b/បាត់ដំបង.html
@@ -22,9 +22,9 @@
       <head>
    </head>
    <body>
-      <!-- <div class="preloader">
+      <div class="preloader">
          <div class="preloader_wrapper"></div>
-      </div> -->
+      </div>
       <nav id="menu-navbar">
          <div id="navbar-content-wrapper">
             <div
@@ -96,21 +96,195 @@
             <div class="description-1">
                <div class="img-content-wrap">
                   <!-- Main Image of Post in Top -->
-                  <img class="img-content-post" src="images/Cambodia/កោះកុង.jpg"/>
+                  <img class="img-content-post" src="images/Cambodia/Battambang-1.jpg"/>
                   <div class="overlay">
                      <!-- Title Will show upper Main Image -->
-                     <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តកោះកុង</p>
+                     <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តបាត់ដំបង</p>
                   </div>
                </div>
                <!-- All Content and Image put here -->
-               <!-- Discription of post write here -->
-               <p class="text-description"></p>
-               <!-- Sub Title it will show Border, Big , and color red -->
-               <p class="text-title-readmore">​រាជធានីភ្នំពេញ</p>
-               <!-- Sub Title 1 will show border, Big , color back -->
-               <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-               <!-- Image post in Discription -->
-               <img class="img-content-post" src="./images/ខេត្តសៀមរាប.jpeg">
+               <p class="text-description">ខេត្តបាត់ដំបង គឺជាខេត្តមួយនៅភាគពាយ័ព្យនៃព្រះរាជាណាចក្រកម្ពុជា។ ខេត្តបាត់ដំបង មានទីប្រជុំជនធំនៅក្រុងបាត់ដំបង។ ខេត្តបាត់ដំបងមានព្រំប្រទល់ ខាងជើងជាប់ខេត្តបន្ទាយមានជ័យ ខាងកើតជាប់ខេត្តសៀមរាបនិងបឹងទន្លេសាប ខាងត្បូងជាប់ខេត្តពោធិ៍សាត់ ខាងលិចជាប់ខេត្តប៉ៃលិននិងខេត្តច័ន្ទបុរី(ប្រទេសថៃ)។</p>
+              <p class="text-description">ខេត្តបាត់ដំបង មានកន្លែងកំសាន្ដដែលទាក់ទាញភ្ញៀវទេសចរណ៍ជាច្រើនមានដូចជា :</p>
+              <p class="text-title-readmore">ឡូរីជើងភ្នំបាណន់ - Bamboo Train</p>
+              <!-- Bootstrap Slide View -->
+              <div class="img-content-post">
+                  <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                      <li data-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                      <li data-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                      <li data-target="#carouselIndicators" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                      <li data-target="#carouselIndicators" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="images/image travel /បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់1.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/image travel /បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់2.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/image travel /បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់3.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/image travel /បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់4.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                       <img src="images/image travel /បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់5.jpg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                  <!-- End Bootstrap Slide View -->
+              </div>
+              <p class="text-description">ឡូរីជើងភ្នំបាណន់ - Bamboo Train គឺជាកន្លែងកម្សាន្ត ជិះឡូរី ដែលមានចម្ងាយប្រមាណ ៤.២គីឡូម៉ែត្រពីក្រុងបាត់ដំបង ធ្វើដំណើរប្រហែល១៣នាទី។
+              </br>លោកអ្នក អាចចូលលេង និងជិះឡូរីត្រឹមតែ ១ម៉ឺនរៀលសម្រាប់ពលរដ្ឋខ្មែរ និង៥ដុល្លារ សម្រាប់បរទេស។ ទេសភាព ព្រៃភ្នំ អមជាមួយដំណើរកម្សាន្ត និងការផ្តិតរូបភាពស្អាតៗ នឹងដក់ជាប់ជាមួយអនុស្សាវរីយ៍ល្អ មិនអាចបំភ្លេចបាន។
+               </br>ឡូរីជើងភ្នំបាណន់ - Bamboo Trainនេះ ស្ថិតនៅស្រុកបាណន់ ក្រុងបាត់ដំបង ខេត្តបាត់ដំបង។ 
+               </p>
+              <p class="text-title-readmore">ផ្ទះផ្កា Begonia បាត់ដំបង - Begonia Flower House </p>
+              <div class="img-content-post">
+                  <div id="carouselIndicators1" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                     <li data-target="#carouselIndicators1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                     <li data-target="#carouselIndicators1" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                     <li data-target="#carouselIndicators1" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                     <li data-target="#carouselIndicators1" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                     <li data-target="#carouselIndicators1" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                     <div class="carousel-item active">
+                        <img src="images/image travel /បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 1.jpg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                     <div class="carousel-item">
+                        <img src="images/image travel /បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 2.jpg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                     <div class="carousel-item">
+                        <img src="images/image travel /បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 3.jpg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                     <div class="carousel-item">
+                        <img src="images/image travel /បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 4.jpg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                     <div class="carousel-item">
+                     <img src="images/image travel /បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 5.jpg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="prev">
+                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="next">
+                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Next</span>
+                  </button>
+                  </div>
+               </div>
+               <!-- End Bootstrap Slide View -->
+               <p class="text-description">ផ្ទះផ្កា Begonia បាត់ដំបង - Begonia Flower House គឺកន្លែងកម្សាន្តថ្មីស្រឡាងមួយកន្លែង កំពុងមានការទាក់ទាញភ្ញៀវជាតិ និងអន្តរជាតិយ៉ាងខ្លាំងត្រឹមរយៈពេលដ៏ខ្លី។ ការតុបតែងផ្កាចម្រុះដ៏ទាក់ទាញមួយនេះ មានចម្ងាយប្រមាណ ១៦គីឡូម៉ែត្រពីក្រុងបាត់ដំបង ប្រមាណ៣០នាទី។
+               </br>នៅទីតាំងនៃផ្ទះផ្កា មានទីធ្លាដីធ្លីធំទូលាយ មានដាំដើមផ្កាស្រស់ស្អាតពូជប្លែកៗជាច្រើនចម្រុះគ្នាយ៉ាងប្រណីត មានទាំងសួន  មានទាំងតម្រៀបថូកាច់ជារាងស្រស់ស្អាត។  មើលទៅដឹងតែប្លែកភ្នែកតែម្តង ពិតជាពិសេសណាស់សម្រាប់អ្នកដែលចូលចិត្តថតរូប និងគូសេ្នហ៍។
+               </br>អ្វីដែលលោកអ្នក មិនអាចបំភ្លេចបានទៀតនោះ គឺការរៀបចំដែលមានរូបរាង និងសោភណ្ឌភាពមិនចាញ់នឹងបរទេសឡើយ។
+               </br>ផ្ទះផ្កា Begonia បាត់ដំបង - Begonia Flower Houseនេះ ស្ថិតនៅផ្លូវលេខ១៥៤ ភូមិបត់សាលា ឃុំឈើទាល ស្រុកបាណន់ ខេត្តបាត់ដំបង ក្បែរចំការទំពាំងបាយជូរតាមផ្លូវទៅបាណន់។
+               </p>
+               <p class="text-title-readmore">ទឹកធ្លាក់អូរជាំ</p>
+               <div class="img-content-post">
+                  <div id="carouselIndicators2" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                     <li data-target="#carouselIndicators2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                     <li data-target="#carouselIndicators2" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                     <li data-target="#carouselIndicators2" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                     <li data-target="#carouselIndicators2" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                     <li data-target="#carouselIndicators2" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                     <div class="carousel-item active">
+                        <img src="images/image travel /បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 1.jpg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                     <div class="carousel-item">
+                        <img src="images/image travel /បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 2.jpg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                     <div class="carousel-item">
+                        <img src="images/image travel /បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 3.jpg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                     <div class="carousel-item">
+                        <img src="images/image travel /បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 4.jpg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                     <div class="carousel-item">
+                        <img src="images/image travel /បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 5.jpg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="prev">
+                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="next">
+                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Next</span>
+                  </button>
+                  </div>
+               </div>
+               <!-- End Bootstrap Slide View -->
+               <p class="text-description">ទឹកធ្លាក់អូរជាំ គឺជាកន្លែងទេសចរណ៍មួយកន្លែងដែលមានចម្ងាយប្រមាណ១០០គីឡូម៉ែត្រពីក្រុងបាត់ដំបង ធ្វើដំណើរប្រហែល២ម៉ោង។
+               </br></br>នៅទីនេះ មានដូចជា៖
+               </br> o	ជិះត្រាក់ទ័រទៅកំសាន្តចំការមៀនសំឡូត និងចំការម្រេច
+               </br> o	ភ្លក់មុខម្ហូបដែលចម្អិនដោយប្រជាជននៅក្នុងតំបន់
+               </br> o	មុជទឹកជ្រោះដ៏សែនត្រជាក់
+               </br> o	ទឹកធ្លាក់
+               </br> o	គេងបោះតង់ ដុតភ្នក់ភើ្លង ដុតពោតញុំ
+               </br> o	គេងមើលផ្កាយនាពេលរាត្រី
+               </br> o	ធើ្វដំណើរទៅក្នុងព្រៃបែបផ្សងព្រេង
+               </br> o	ថតរូបជាមួយធម្មជាតិដ៏ស្រស់បំព្រងដើម្បីទុកជាអនុស្សាវរីយ៍
+               </br></br>អូរជាំ នេះ ស្ថិតនៅឃុំកំពង់ល្ពៅ ស្រុកសំឡូត ខេត្តបាត់ដំបង។
+               </p>
+               <p class="text-title-readmore">តំបន់ទេសចរណ៍ស្ទឹងគ្រញូង</p>
+               <div class="img-content-post">
+                  <div id="carouselIndicators3" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                     <li data-target="#carouselIndicators3" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                     <li data-target="#carouselIndicators3" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                     <li data-target="#carouselIndicators3" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                     <li data-target="#carouselIndicators3" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                     <li data-target="#carouselIndicators3" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                     <div class="carousel-item active">
+                        <img src="images/image travel /បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                     <div class="carousel-item">
+                        <img src="images/image travel /បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                     <div class="carousel-item">
+                        <img src="images/image travel /បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                     <div class="carousel-item">
+                        <img src="images/image travel /បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                     <div class="carousel-item">
+                        <img src="images/image travel /បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 5.jpeg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="prev">
+                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="next">
+                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Next</span>
+                  </button>
+                  </div>
+               </div>
+               <!-- End Bootstrap Slide View -->
+               <p class="text-description">តំបន់ទេសចរណ៍ស្ទឹងគ្រញូង គឺជាតំបន់ទេសចរណ៍ធម្មជាតិមួយ មានចម្ងាយប្រមាណ ៨០គីឡូម៉ែតពីក្រុងបាត់ដំបង ដែលមានចម្ងាយប្រមាណជិត ២ម៉ោង។ 
+                  ភ្ញៀវទេសចរដែលមានបំណងចង់ទៅលេងនៅតំបន់ទេសចរណ៍នេះ អាចធ្វើដំណើរ ទៅកាន់ស្រុកសំឡូត ហើយឆ្ពោះទៅកាន់តំបន់ទេសចរណ៍នេះតែម្តង។
+                  នៅទីនេះ មានធម្មជាតិស្រស់ត្រកាល ខៀវខ្ចីនៃដើមឈើទាំងតូច ទាំងធំដុះលើទឹកដីដ៏ត្រជាក់ជាប់នឹងមាត់ស្ទឹង  មានទឹកថ្លាឈ្វេង ត្រជាក់ល្ហឹម ដែលមានចរន្តទឹកហូរខួបប្រាំងខួបវស្សា។ 
+               </br></br>ភ្ញៀវទេសចរ ក៏អាចចុះងូតទឹកលេងកម្សាន្ត លំហែចិត្តក្នុងស្ទឹងមានថ្មរដិបរដុបផុស ឡើងរាយប៉ាយបាន។ លើសពីនេះទៅទៀត នៅទីនោះក៏មានតូបលក់អាហារ និងស្ពានយោលសម្រាប់មើលទេសភាពផងដែរ។
+                  តំបន់ទេសចរណ៍ស្ទឹងគ្រញូងនេះ ស្ថិតនៅភូមិតាសាញជើង ឃុំតាសាញ ស្រុកសំឡូត ខេត្តបាត់ដំបង។
+                  </p>
             </div>
          </div>
       </div>
