--- a/ពោធិ៍សាត់.html
+++ b/ពោធិ៍សាត់.html
@@ -22,9 +22,9 @@
       <head>
    </head>
    <body>
-      <!-- <div class="preloader">
+      <div class="preloader">
          <div class="preloader_wrapper"></div>
-      </div> -->
+      </div>
       <nav id="menu-navbar">
          <div id="navbar-content-wrapper">
             <div
@@ -96,21 +96,55 @@
             <div class="description-1">
                <div class="img-content-wrap">
                   <!-- Main Image of Post in Top -->
-                  <img class="img-content-post" src="images/Cambodia/កោះកុង.jpg"/>
+                  <img class="img-content-post" src="images/Cambodia/ពោធិ៍សាត់.jpg"/>
                   <div class="overlay">
                      <!-- Title Will show upper Main Image -->
-                     <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តកោះកុង</p>
+                     <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តពោធិ៍សាត់</p>
                   </div>
                </div>
                <!-- All Content and Image put here -->
-               <!-- Discription of post write here -->
-               <p class="text-description"></p>
-               <!-- Sub Title it will show Border, Big , and color red -->
-               <p class="text-title-readmore">​រាជធានីភ្នំពេញ</p>
-               <!-- Sub Title 1 will show border, Big , color back -->
-               <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-               <!-- Image post in Discription -->
-               <img class="img-content-post" src="./images/ខេត្តសៀមរាប.jpeg">
+               <p class="text-description">ខេត្តពោធិ៍សាត់ មានទីតាំងនៅភាគខាងលិចបឹងទន្លេសាប។ ខេត្តពោធិ៍សាត់គ្របដណ្ដប់មួយភាគធំដោយជួរភ្នំ។ ទោះបីជាខេត្តនេះមិនមែនជាតំបន់ដែលមានប្រាសាទបុរាណ ផ្នែកសំខាន់ៗរបស់ខេត្តនេះពោរពេញទៅដោយប្រវត្តិសាស្រ្តសង្គ្រាមរវាងសៀម និងខ្មែរដែលបានកើតឡើងមុនសម័យអាណានិគមបារាំងក្នុងប្រទេសកម្ពុជា។ </p>
+              <p class="text-description">ខេត្តពោធិ៍សាត់ មានកន្លែងកំសាន្ដដែលទាក់ទាញភ្ញៀវទេសចរណ៍ជាច្រើនមានដូចជា :</p>
+              <p class="text-title-readmore">តំបន់ភ្នំ១៥០០ និង អូដារ</p>
+              <!-- Bootstrap Slide View -->
+              <div class="img-content-post">
+                  <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                      <li data-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                      <li data-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                      <li data-target="#carouselIndicators" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                      <li data-target="#carouselIndicators" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង​1.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង2.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង3.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង4.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                       <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង5.jpg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+               </div>
+               <!-- End Bootstrap Slide View -->
+              <!-- <p class="text-title-readmore">រមណីយដ្ឋាន ពិកនិក</p> -->
             </div>
          </div>
       </div>
