--- a/ពោធិ៍សាត់.html
+++ b/ពោធិ៍សាត់.html
@@ -144,7 +144,9 @@
                   </div>
                </div>
                <!-- End Bootstrap Slide View -->
-              <!-- <p class="text-title-readmore">រមណីយដ្ឋាន ពិកនិក</p> -->
+              <p class="text-description">នៅចន្លោះតំបន់ភ្នំ១៥០០ និងតំបន់ថ្មដា ភ្ញៀវទេសចរអាចសំចតនៅទីតាំងសុវត្ថិភាពណាមួយ ដែលមានទេសភាពព្រៃភ្នំ វាលស្មៅលើខ្នងភ្នំ ទឹកអូរហូរតាមជ្រលងភ្នំ ដ៏ស្រស់ត្រកាល ទស្សនាកាន់តែយូរកាន់តែជក់ចិត្ត។
+               បន្តដំណើរទៅមុខបន្តិច ភ្ញៀវទេសចរនឹងបានទៅដល់រមណីយដ្ឋានទឹកធ្លាក់ថ្មដាតូច ដែលមានទឹកធ្លាក់ដ៏ស្រស់ស្អាត មានកន្លែងមុជទឹកលេងកម្សាន្ត មានម្ហូបអាហារសហគមន៍ឈ្ងុយឆ្ងាញ់ ព្រមទាំងនៅជិតនឹងមាត់ផ្លូវធ្វើដំណើរ មិនពិបាកចំណាយពេលច្រើនក្នុងការទៅដល់។
+               </p>
             </div>
          </div>
       </div>
